...

    >

<androidx.core.widget.NestedScrollView
    style="@style/match_parent_style"
    android:fillViewport="true"
    android:id="@+id/nested_scroll_rx_respond"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        style="@style/match_parent_style"
        android:orientation="vertical">

...
                        android:layout_width="@dimen/_240sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_select_defectsfound"
                            style="@style/textview_spinner"
                            android:text="@string/lbl_select_defectsfound" />

                        <com.daemon.emco_android.ui.components.CustomTextInputLayout
                            android:id="@+id/til__defectsfound"
                            style="@style/text_input_layout_common_new"
                            android:visibility="visible">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tie_defectsfound"
                                style="@style/text_input_edittext_common_new"
                                android:hint="@string/lbl_defectsfound_comments"
                                android:imeOptions="actionDone|flagNoExtractUi"
                                android:minHeight="@dimen/_30sdp"
                                android:maxLength="250"
                                />
...
                        style="@style/textview_label_react"
                        android:layout_width="@dimen/_90sdp"
                        fontPath="fonts/HelveticaBold.otf"
                        android:text="@string/lbl_workstatus" />

                    <TextView
                        android:id="@+id/tv_select_workstatus"
                        style="@style/textview_spinner_update"
                        android:layout_width="@dimen/_230sdp"
                        android:text="@string/lbl_select_workstatus" />
                </LinearLayout>

                <LinearLayout
...
                        <com.daemon.emco_android.ui.components.CustomTextInputLayout
                            android:id="@+id/til_workdone"
                            style="@style/text_input_layout_common_new"
                            android:visibility="visible">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tie_workdone"
                                style="@style/text_input_edittext_common_new"
                                android:hint="@string/lbl_defectsfound_comments"
                                android:imeOptions="actionDone|flagNoExtractUi"
                                android:minHeight="@dimen/_30sdp"
                                android:maxLength="250" />
                        </com.daemon.emco_android.ui.components.CustomTextInputLayout>
...
                        style="@style/match_wrap_style"
                        android:layout_width="@dimen/_240sdp"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_select_reason"
                            style="@style/textview_spinner_update"
                            android:text="@string/lbl_select_reason" />

                        <com.daemon.emco_android.ui.components.CustomTextInputLayout
                            android:id="@+id/til_workpending"
                            style="@style/text_input_layout_common"
...
                        style="@style/textview_label_react"
                        android:layout_width="@dimen/_90sdp"
                        fontPath="fonts/HelveticaBold.otf"
                        android:text="@string/tentative_date" />

                    <TextView
                        android:id="@+id/tv_select_tentative_date"
                        style="@style/textview_calendar"
                        android:layout_width="@dimen/_230sdp"
                        android:hint="@string/lbl_select_tentative_date" />

                </LinearLayout>

...
                    android:layout_marginLeft="@dimen/_60sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_60sdp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_ppe"
                        style="@style/btn_wrap_content_gray"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/lbl_ppe" />

                    <Button
...
                    android:layout_marginLeft="@dimen/_60sdp"
                    android:layout_marginRight="@dimen/_60sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_respond_save"
                        style="@style/btn_wrap_content"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_gravity="center"
                        android:text="@string/lbl_save" />
                </LinearLayout>

...
