<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match_wrap_style"
    android:orientation="vertical">
    <LinearLayout
        style="@style/match_wrap_style"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_ppe_name"
            style="@style/textview_label"
            android:layout_weight="1"
            android:text="@string/lbl_ppe"/>
        <LinearLayout
            style="@style/match_wrap_style"
            android:layout_weight="1"
            android:orientation="horizontal">
            <RadioGroup
                android:id="@+id/radiogroup_ppe"
                style="@style/match_wrap_style"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rd_yes"
                    style="@style/radio_button_common"
                    android:layout_weight="1"
                    android:checked="true"/>
                <RadioButton
                    android:id="@+id/rd_no"
                    style="@style/radio_button_common"
                    android:layout_weight="1"/>
                <RadioButton
                    android:id="@+id/rd_nr"
                    style="@style/radio_button_common"
                    android:layout_weight="1"/>
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>
    <Button
        android:id="@+id/btnSavePpe"
        style="@style/btn_common"
        android:visibility="gone"
        android:text="@string/lbl_save"  />

</LinearLayout>