...
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="invisible"
                    android:weightSum="2.8">

                    <ImageView
                        android:id="@+id/btn_reactive_maintenance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_20sdp"
                        android:layout_weight="1"
                        android:src="@drawable/reactivebtn" />

...
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_20sdp"
                            android:layout_weight="1"
                            android:src="@drawable/logcomplaints_btn" />

                        <ImageView
                            android:id="@+id/btn_receive_complaint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_20sdp"
                            android:layout_weight="1"
                            android:src="@drawable/receivecomplaints_btn" />

...
